--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "website",
   "private": true,
   "type": "module",
+  "homepage": "https://alchemyforge.github.io/alchemy-lens-website",
   "scripts": {
     "build": "react-router build",
     "dev": "react-router dev",
